try horizontal sign up swiper; scrollbar design fix

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,7 +11,7 @@ html {
 }
 
 div {
-  @apply scrollbar-thin scrollbar-track-gray-100 scrollbar-thumb-gray-400 hover:scrollbar-thumb-gray-500;
+  @apply md:scrollbar-thin md:scrollbar-track-gray-100 md:scrollbar-thumb-gray-400 md:hover:scrollbar-thumb-gray-500;
 }
 
 @layer base {
